# poc_custom_hsm

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  custom_hsm_tpm_impl.h  custom_hsm_x509_impl.h  hsm_client_data.h
inc/: custom_hsm_impl.h  custom_hsm_x509_impl.h  tpm_impl.h  tpm_openssl.h  x509_impl.h  x509_openssl.h
sample/: CMakeLists.txt  main.c
src/: custom_hsm_impl.c  tpm_impl.c  tpm_openssl.c  x509_impl.c  x509_openssl.c
